<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToDoApp</string>
    <string name="add">ADD</string>
    <string name="lista_de_tareas">Aplicacion de tareas</string>
    <string name="task">Tareas</string>
    <string name="addTask" tools:ignore="ExtraTranslation">Añadir tareas</string>
    <string name="delete_task_confirm">¿Borrar Tarea?</string>
    <string name="delete_task_title">Eliminar tarea</string>
    <string name="delete_task_button">Borrar</string>
    <string name="delete_task_confirm_message">Está seguro:%1$s</string>
    <string name="delete_task_success_message">Tarea borrada correctamente</string>
    <string name="new_task">Nueva tarea</string>
    <string name="create_task">Crear</string>
    <string name="categories">Categorias :</string>

    <string name="delete_cat_title">Eliminar categoria</string>
    <string name="delete_cat_confirm">Está seguro:%1$s </string>
    <string name="delete_cat_button">Borrar</string>
    <string name="hogar">Hogar</string>
    <string name="estudios">Estudios</string>
    <string name="personal">Personal</string>
    <string name="trabajo">Trabajo</string>
    <string name="casa">Casa</string>



    <string-array name="Categories">
        <item>Personal</item>
        <item>Estudios</item>
        <item>Hogar</item>
        <item>Trabajo</item>
        <item>Otras</item>

    </string-array>





</resources>