<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:orientation="vertical"
        tools:context=".activities.MainActivity"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/textViewIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="44dp"
            android:layout_gravity="center"
            android:text="@string/lista_de_tareas"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />



        <TextView
            android:id="@+id/textViCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/categories"
            android:textStyle="italic"
            android:textSize="30dp"
            android:textColor="@color/white"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




        <TextView
            android:id="@+id/textViTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@android:color/holo_green_light"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:fabSize="normal"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCatBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@android:color/holo_orange_dark"
        android:layout_gravity="end|top"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:fabSize="normal"
        app:tint="@color/black"
        android:layout_marginTop="150dp"/>





</FrameLayout>